# setupwize

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  docker-compose.yaml  mypy.ini  package_tamplate.yaml  pyproject.toml  ruff.toml
configurations/alacritty/: alacritty.toml
configurations/figlet-fonts/: 3-D.flf  3d_diagonal.flf  AMCNeko.flf  Alpha.flf  Arrows.flf  Barbwire.flf  Basic.flf  BigMoney-se.flf  BigMoney-sw.flf  Bolger.flf  Braced.flf  BroadwayKB.flf  Catwalk.flf  Chiseled.flf  Chunky.flf  Coinstak.flf  Colossal.flf  Crazy.flf  Cricket.flf  DancingFont.flf  DefLeppard.flf  Diamond.flf  DoubleShorts.flf  EftiRobot.flf  Filter.flf  FlowerPower.flf  FunFace.flf  FunFaces.flf  Ghost.flf  Ghoulish.flf  Glenyn.flf  Graffiti.flf  Henry3D.flf  Hieroglyphs.flf  ICL-1900.flf  Ivrit.flf  JSBlockLetters.flf  JSBracketLetters.flf  JSCapitalCurves.flf  JSCursive.flf  (+34 more)
configurations/nvim/lua/config/: lazy.lua
configurations/nvim/lua/plugins/: bufferline.lua  colorscheme.lua  dashboard-nvim.lua  git-blame-nvim.lua  lualine-nvim.lua  mini-pairs.lua  neo-tree.lua  nvim-cmp-snippets.lua  nvim-cmp.lua  persistence.lua  supertab.lua
configurations/zellij/: config.kdl
configurations/zsh/: aliases  functions  p10k.zsh  zsh-config  zsh-prompt  zshrc
core/: env.py  exceptions.py  interactive_selector.py  packages.py  run_cmd.py  tasks.py
core/tracers/: __init.py  log.py
parser/: __init__.py  yaml_parser.py
scripts/: setup_project.sh
utils/: __init__.py  utils.py
